kubernetes/project1-deployment.yml
apiVersion: apps/v1 
kind: Deployment
metadata:
  name: learning-management-app
  namespace: hung-ly
  labels:
    app: learning-management-app
spec:
  selector:
    matchLabels:
      app: learning-management-app
  replicas: 1
  template:
    metadata:
      labels:
        app: learning-management-app
    spec:
      volumes:
      - name: config
        configMap:
          name: fluent-conf
      containers:
      - name: fluentd 
        ports:
        - containerPort: 24224
        image: grafana/fluent-plugin-loki:latest
        volumeMounts:
        - name: config
          mountPath: /fluentd/etc/fluent.conf
          subPath: fluent.conf
      - name: project1
        image: kentleeme/project1:latest
        ports:
        - containerPort: 7000
