kubernetes/project1-service.yml
apiVersion: v1
kind: Service
metadata:
  name: learning-management-app
  namespace: hung-ly
spec:
  selector:
    app: learning-management-app
  ports:
  - name: http
    protocol: TCP
    port: 7000
    targetPort: 7000
  type: ClusterIP
