kubernetes/project1-ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: learning-management-app
  namespace: hung-ly
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - http:
      paths:
      - path: /learning-management/?(.*)
        backend:
          serviceName: learning-management-app
          servicePort: 7000
